gccida/g0/higher_prime_number
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/higher_prime_number/src/hashtab.c:538:19: error: conflicting types for 'higher_prime_number'
unsigned __int64  higher_prime_number( unsigned __int64 n) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/higher_prime_number/src/hashtab.c:60:22: note: previous declaration is here
static unsigned long higher_prime_number PARAMS ((unsigned long));
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/higher_prime_number/src/hashtab.c:544:7: error: use of undeclared identifier 'primes_0'
low = primes_0; 
      ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/higher_prime_number/src/obj/hashtab.o] Error 1
